Designed Login screen.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black">#000000</color>
+    <color name="black_232526">#232526</color>
+    <color name="black_414345">#414345</color>
+    <color name="blue">#416BC1</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
