--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
     android:background="@drawable/gradient_midnight_city"
     >
 
-    <include
-        layout="@layout/toolbar_main"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/customToolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:layout_constraintTop_creator="1"
@@ -17,7 +17,22 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/black"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="@dimen/toolbar_main_text_size"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
     <com.andexert.library.RippleView
         android:id="@+id/loginRippleView"
