--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -8,7 +8,8 @@
     android:background="@drawable/gradient_midnight_city"
     >
 
-    <include layout="@layout/toolbar_main"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/customToolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:layout_constraintRight_creator="1"
@@ -16,11 +17,25 @@
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/include"
         app:layout_constraintBottom_toTopOf="@+id/pubsRecyclerView"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:background="@color/black"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="@dimen/toolbar_main_text_size"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/loadingView"
@@ -30,23 +45,24 @@
         android:visibility="visible"
         app:indicatorName="BallPulseIndicator"
         app:indicatorColor="@color/white"
-        tools:layout_editor_absoluteY="245dp"
         android:layout_marginRight="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pubsRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/customToolbar" />
 
 </android.support.constraint.ConstraintLayout>
