--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -10,17 +10,15 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/customToolbar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout_constraintRight_creator="1"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/pubsRecyclerView"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintVertical_bias="0.0"
         android:background="@color/black"
         >
 
@@ -42,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/AVLoadingIndicatorView.Large"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:indicatorName="BallPulseIndicator"
         app:indicatorColor="@color/white"
         android:layout_marginRight="8dp"
@@ -57,12 +55,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pubsRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/customToolbar" />
 
 </android.support.constraint.ConstraintLayout>
