--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black_232526">#232526</color>
     <color name="black_414345">#414345</color>
     <color name="blue">#416BC1</color>
+    <color name="gold">#E6B800</color>
     <color name="white">#FFFFFF</color>
 
 </resources>
