--- a/app/src/main/res/layout/activity_pub_details.xml
+++ b/app/src/main/res/layout/activity_pub_details.xml
@@ -77,11 +77,13 @@
                     android:layout_height="match_parent">
 
                     <View
-                        android:id="@+id/view2"
+                        android:id="@+id/leftSideView"
                         android:layout_width="@dimen/pub_cardview_side_effect_width"
                         android:layout_height="match_parent"
                         android:background="@color/black"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
                     <TextView
                         android:id="@+id/pubNameTextView"
@@ -94,7 +96,7 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/pub_name_text_size"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/view2"
+                        app:layout_constraintStart_toEndOf="@+id/leftSideView"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintBottom_toTopOf="@+id/pubPhoneTextView"
@@ -112,15 +114,26 @@
                         android:textSize="@dimen/pub_name_text_size"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/view2"
+                        app:layout_constraintStart_toEndOf="@+id/leftSideView"
                         app:layout_constraintTop_toBottomOf="@+id/pubNameTextView"
                         app:layout_constraintHorizontal_bias="0.5" />
+
+                    <View
+                        android:id="@+id/rightSideView"
+                        android:layout_width="@dimen/pub_cardview_side_effect_width"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"
+                        attribute:layout_editor_absoluteY="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="0dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.v7.widget.CardView>
             
-            <com.google.android.gms.maps.MapView
+            <com.orogersilva.superpub.dublin.presentation.screen.pubdetails.view.PubLocationMapView
                 android:id="@+id/pubDetailsMapView"
                 android:layout_width="match_parent"
                 android:layout_height="600dp"
@@ -128,9 +141,9 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/pubDetailsCardView"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="0dp"
+                android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="0dp" />
+                android:layout_marginEnd="24dp" />
 
         </android.support.constraint.ConstraintLayout>
 
