--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/AVLoadingIndicatorView.Large"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:indicatorName="BallPulseIndicator"
         app:indicatorColor="@color/white"
         android:layout_marginRight="8dp"
