--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -52,17 +52,31 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pubsRecyclerView"
-        android:layout_width="0dp"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/pubsSwipeRefreshLayout"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
+        tools:layout_editor_absoluteX="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="0dp"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/customToolbar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/pubsRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="0dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/customToolbar" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
