--- a/app/src/main/res/layout/activity_pub_details.xml
+++ b/app/src/main/res/layout/activity_pub_details.xml
@@ -143,7 +143,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="24dp" />
+                android:layout_marginEnd="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp" />
 
         </android.support.constraint.ConstraintLayout>
 
