--- a/app/src/main/res/layout-v21/cardview_pub.xml
+++ b/app/src/main/res/layout-v21/cardview_pub.xml
@@ -40,6 +40,7 @@
             android:gravity="center"
             android:textSize="@dimen/pub_name_text_size"
             android:textColor="@color/black"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -51,6 +52,7 @@
             android:gravity="center"
             android:textSize="@dimen/pub_rating_text_size"
             android:textColor="@color/black"
+            android:textStyle="bold"
             />
 
     </LinearLayout>
