--- a/app/src/main/res/layout/activity_pub_details.xml
+++ b/app/src/main/res/layout/activity_pub_details.xml
@@ -54,6 +54,15 @@
             android:layout_height="wrap_content"
             >
 
+            <ImageView
+                android:id="@+id/pubDetailsBackgroundImageView"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
             <android.support.v7.widget.CardView
                 android:id="@+id/pubDetailsCardView"
                 android:layout_width="match_parent"
@@ -63,13 +72,11 @@
                 attribute:cardCornerRadius="@dimen/pub_cardview_corner_radius"
                 attribute:layout_editor_absoluteX="507dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pubDetailsBackgroundImageView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                >
+                android:layout_marginEnd="8dp">
 
 
                 <android.support.constraint.ConstraintLayout
@@ -95,6 +102,7 @@
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textSize="@dimen/pub_name_text_size"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/leftSideView"
                         app:layout_constraintTop_toTopOf="parent"
@@ -112,6 +120,7 @@
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textSize="@dimen/pub_name_text_size"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/leftSideView"
