--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,21 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/black"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/toolbar_main_text_size"
-            />
-
-    </android.support.v7.widget.Toolbar>
+        android:background="@color/black" />
 
     <com.andexert.library.RippleView
         android:id="@+id/loginRippleView"
@@ -62,5 +48,36 @@
             tools:text="@string/login_with_facebook" />
 
     </com.andexert.library.RippleView>
+
+    <ImageView
+        android:id="@+id/logoImageView"
+        android:layout_width="224dp"
+        android:layout_height="249dp"
+        app:srcCompat="@drawable/ic_sp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/customToolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/loginRippleView" />
+
+    <TextView
+        android:id="@+id/sloganTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/slogan_label"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/loginRippleView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
 </android.support.constraint.ConstraintLayout>
