--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -22,16 +22,11 @@
         android:background="@color/black"
         >
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="@dimen/toolbar_main_text_size"
-            />
+            android:src="@drawable/ic_sp" />
 
     </android.support.v7.widget.Toolbar>
 
