Flows on login screen.

--- a/app/src/main/res/layout/activity_pubs.xml
+++ b/app/src/main/res/layout/activity_pubs.xml
@@ -26,7 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_sp" />
+            android:src="@drawable/ic_sp"
+            tools:ignore="contentDescription"
+            />
 
     </android.support.v7.widget.Toolbar>
 
