Improved mechanism to rank pubs.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="black_414345">#414345</color>
     <color name="blue">#416BC1</color>
     <color name="gold">#E6B800</color>
+    <color name="silver">#919AA2</color>
     <color name="white">#FFFFFF</color>
 
 </resources>
